--- a/Комментарии к решению.md
+++ b/Комментарии к решению.md
@@ -7,6 +7,6 @@ AppShoppingCart
 
 В корзине реализовал, всё что необходимо, кроме кнопки "Удалить", её функционал косвенно реализуется через уменьшение количества товара до нуля.
 
-Функционал по чекам не успел до конца реализовать,не сделал проверку по введенной сумме и сохранение в таблицу checklines, только в таблицу checks. Если дать ещё время - могу доделать.
+Функционал по чекам не успел до конца реализовать: сохранение в таблицу checklines, только в таблицу checks. Если дать ещё время - могу доделать.
 
 Спасибо за терпение)
